--- a/whatsapp.css
+++ b/whatsapp.css
@@ -1,3 +1,6 @@
+*{
+    /* border: 2px solid red; */
+}
 body{
     height: 2000px;
     width: 100%;
@@ -6,13 +9,15 @@ body{
 }
 #header{
     display: flex;
-    width: 1900px;
+    width: 100vw;
     height: 100px;
     background-color: rgba(252, 245, 235, 0.924);
     color: black;
     position: fixed;
     border-bottom: 0.5px solid rgb(128, 128, 128, 0.2);
     z-index: 1000;
+    /* justify-content: space-between; */
+    /* padding: 0px 50px; */
 }
 
 #div1{
@@ -56,7 +61,7 @@ body{
 
 .navBAr-buttons{
     margin-top: 15px;
-    margin-left: 290px;
+    margin-left: 300px;
     display: flex;
 }
 
@@ -104,20 +109,21 @@ body{
 }
 
 #body1{
+    /* width: 100%; */
     height: 900px;
-    padding: 0px 50px;
 }
 
 #B-body1{
     background-image: url(./image/background-color1.png);
     background-size: cover;
-    width: 1800px;
+    width: 95%;
     height: 750px;
     border-radius: 25px;
     color: white;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: auto;
 }
 
 
@@ -136,12 +142,13 @@ body{
 }
 
 #B-body2i{
+    width: 20%;
     margin-left: -320px;
     margin-top: -180px;
 }
 
 #chats{
-    width: 100px;
+    width: 10%;
     margin-left: 350px;
     margin-top: -180px;
 }
@@ -166,7 +173,7 @@ body{
 }
 
 #info{
-    width: 330px;
+    width: 23%;
     justify-self: flex-end;
     text-align:left;
     color: rgb(133, 133, 130);
@@ -192,7 +199,9 @@ body{
 }
 
 #dp-text{
-    width: 1300px;
+    display: flex;
+    align-self: center;
+    width: 70%;
 
 }
 
